--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sankum Chandra | Cloud & DevOps Architect</title>
+  <title> Santhosh Kumar Chandrashekar | Cloud & DevOps Architect</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-  <h1>Sankum Chandra</h1>
+  <h1>Santhosh Kumar Chandrashekar</h1>
   <p><strong>Cloud & DevOps Portfolio Architect</strong></p>
 
   <div class="section">
@@ -47,8 +47,8 @@
   <div class="section">
     <h2>Contact</h2>
     <p>
-      LinkedIn: <a href="https://linkedin.com" target="_blank">View Profile</a><br>
-      Email: sankum@example.com
+      LinkedIn: <a href="https://linkedin.com/in/sankum-chandra" target="_blank">View Profile</a><br>
+      Email: sankum.chandra@outlook.com
     </p>
   </div>
 
