--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
     <h2>Key Work</h2>
     <p>Delivered cloud platform architecture, DevOps modernization, and multi-cloud strategies for large enterprises, enabling secure, scalable, and automated digital platforms.</p>
   </div>
+  <div class="section">
+  <h2>Key Projects</h2>
+
+  <h3>Enterprise Cloud Landing Zone (Azure)</h3>
+  <p>Designed and implemented a secure, scalable Azure landing zone for a large enterprise, enabling standardized networking, identity, governance, and subscription management across multiple business units.</p>
+
+  <h3>DevOps Transformation Program</h3>
+  <p>Led DevOps enablement across 40+ applications by introducing CI/CD pipelines, infrastructure as code, and automated release governance, significantly improving deployment speed and reliability.</p>
+
+  <h3>Multi-Cloud Architecture Strategy</h3>
+  <p>Defined and governed a multi-cloud architecture across Azure and AWS, focusing on workload placement, cost optimization, security baselines, and operational consistency.</p>
+
+</div>
 
   <div class="section">
     <h2>Contact</h2>
