--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Santhosh Kumar Chandrashekar | Cloud & DevOps Architect</title>
+  <title>Santhosh Kumar Chandrashekar | Portfolio Architect</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -10,53 +11,77 @@
       background-color: #f4f6f8;
       color: #333;
     }
-    h1 {
+    h1, h2 {
       color: #0a66c2;
     }
     .section {
-      margin-top: 30px;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
 
-  <h1>Santhosh Kumar Chandrashekar</h1>
-  <p><strong>Cloud & DevOps Portfolio Architect</strong></p>
+  <div style="padding: 40px 0;">
+    <h1 style="font-size: 42px; margin-bottom: 10px;">Santhosh Kumar Chandrashekar</h1>
+    <p style="font-size: 20px; color: #555; margin-top: 0;">
+      Portfolio Architect (Enterprise Architecture) | Cloud, DevOps & Solution Architecture | Azure & AWS
+    </p>
+    <p style="max-width: 750px; line-height: 1.6;">
+      I work within the Enterprise Architecture function as a Portfolio Architect, shaping enterprise-scale cloud platforms, solution architectures, and DevOps ecosystems. I help organizations modernize, migrate, and govern their technology landscape to build secure, scalable, and future-ready digital foundations.
+    </p>
+  </div>
 
   <div class="section">
     <h2>About Me</h2>
-    <p>I am a Cloud and DevOps Architect with 13+ years of experience designing and delivering enterprise-scale cloud platforms, DevOps transformations, and architecture strategies across Azure and AWS environments.</p>
+    <p>
+      I am a Cloud, DevOps, and Solution Architect with 13+ years of experience delivering enterprise-scale cloud platforms, leading cloud migration and modernization programs, and defining architecture strategies across Azure and AWS environments. My role sits within Enterprise Architecture, where I focus on portfolio-level platform strategy, solution alignment, governance, and large-scale transformation.
+    </p>
   </div>
 
   <div class="section">
     <h2>Core Expertise</h2>
     <ul>
-      <li>Cloud Architecture (Azure & AWS)</li>
-      <li>Enterprise Landing Zones</li>
-      <li>DevOps & Platform Engineering</li>
-      <li>Cloud Governance & Security</li>
-      <li>Cost Optimization & FinOps</li>
+      <li>Enterprise & Solution Architecture (Azure & AWS)</li>
+      <li>Cloud Migration & Modernization Programs</li>
+      <li>Cloud Landing Zones & Platform Engineering</li>
+      <li>DevOps Transformation & CI/CD Modernization</li>
+      <li>Cloud Governance, Security & Compliance</li>
+      <li>Cost Optimization & FinOps Strategy</li>
+      <li>Enterprise Architecture Alignment</li>
     </ul>
   </div>
 
   <div class="section">
-    <h2>Key Work</h2>
-    <p>Delivered cloud platform architecture, DevOps modernization, and multi-cloud strategies for large enterprises, enabling secure, scalable, and automated digital platforms.</p>
+    <h2>Key Projects</h2>
+
+    <h3>Enterprise Cloud Landing Zone (Azure)</h3>
+    <p>
+      Designed and implemented a secure, scalable Azure landing zone for a large enterprise, enabling standardized networking, identity, governance, and subscription management across multiple business units.
+    </p>
+
+    <h3>Enterprise Cloud Migration & Modernization</h3>
+    <p>
+      Led large-scale migration and modernization initiatives, moving legacy workloads to Azure and AWS while redesigning architectures for cloud-native services, improved resilience, and operational efficiency.
+    </p>
+
+    <h3>DevOps Transformation Program</h3>
+    <p>
+      Led DevOps enablement across 40+ applications by introducing CI/CD pipelines, infrastructure as code, and automated release governance, significantly improving deployment speed, reliability, and consistency.
+    </p>
+
+    <h3>Multi-Cloud Architecture Strategy</h3>
+    <p>
+      Defined and governed a multi-cloud architecture across Azure and AWS, focusing on workload placement, cost optimization, security baselines, and operational consistency across platforms.
+    </p>
   </div>
+
   <div class="section">
-  <h2>Key Projects</h2>
-
-  <h3>Enterprise Cloud Landing Zone (Azure)</h3>
-  <p>Designed and implemented a secure, scalable Azure landing zone for a large enterprise, enabling standardized networking, identity, governance, and subscription management across multiple business units.</p>
-
-  <h3>DevOps Transformation Program</h3>
-  <p>Led DevOps enablement across 40+ applications by introducing CI/CD pipelines, infrastructure as code, and automated release governance, significantly improving deployment speed and reliability.</p>
-
-  <h3>Multi-Cloud Architecture Strategy</h3>
-  <p>Defined and governed a multi-cloud architecture across Azure and AWS, focusing on workload placement, cost optimization, security baselines, and operational consistency.</p>
-
-</div>
-
+    <h2>Contact</h2>
+    <p>
+      LinkedIn: <a href="https://www.linkedin.com" target="_blank">View Profile</a><br>
+      Email: your-email@sankum.in
+    </p>
+  </div>
   <div class="section">
     <h2>Contact</h2>
     <p>
