--- a/index.html
+++ b/index.html
@@ -1,87 +1,150 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <title>Santhosh Kumar Chandrashekar | Portfolio Architect</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 40px;
-      background-color: #f4f6f8;
-      color: #333;
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      background-color: #ffffff;
+      color: #1a1a1a;
+      line-height: 1.7;
     }
-    h1, h2 {
+
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 60px 20px;
+    }
+
+    h1 {
+      font-size: 42px;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      font-size: 26px;
+      margin-top: 60px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 18px;
+      color: #444;
+    }
+
+    .subtitle {
+      font-size: 18px;
+      color: #666;
+      margin-bottom: 20px;
+    }
+
+    .hero {
+      padding-top: 80px;
+      padding-bottom: 40px;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 8px;
+      font-size: 17px;
+      color: #444;
+    }
+
+    .project {
+      margin-bottom: 25px;
+    }
+
+    .project h3 {
+      margin-bottom: 6px;
+      font-size: 20px;
+    }
+
+    a {
       color: #0a66c2;
+      text-decoration: none;
     }
-    .section {
-      margin-top: 40px;
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .footer {
+      margin-top: 80px;
+      padding-top: 30px;
+      border-top: 1px solid #eee;
+      font-size: 16px;
+      color: #666;
     }
   </style>
 </head>
+
 <body>
 
-  <div style="padding: 40px 0;">
-    <h1 style="font-size: 42px; margin-bottom: 10px;">Santhosh Kumar Chandrashekar</h1>
-    <p style="font-size: 20px; color: #555; margin-top: 0;">
+  <div class="container hero">
+    <h1>Santhosh Kumar Chandrashekar</h1>
+    <div class="subtitle">
       Portfolio Architect (Enterprise Architecture) | Cloud, DevOps & Solution Architecture | Azure & AWS
-    </p>
-    <p style="max-width: 750px; line-height: 1.6;">
-      I work within the Enterprise Architecture function as a Portfolio Architect, shaping enterprise-scale cloud platforms, solution architectures, and DevOps ecosystems. I help organizations modernize, migrate, and govern their technology landscape to build secure, scalable, and future-ready digital foundations.
-    </p>
-  </div>
-
-  <div class="section">
-    <h2>About Me</h2>
+    </div>
     <p>
-      I am a Cloud, DevOps, and Solution Architect with 13+ years of experience delivering enterprise-scale cloud platforms, leading cloud migration and modernization programs, and defining architecture strategies across Azure and AWS environments. My role sits within Enterprise Architecture, where I focus on portfolio-level platform strategy, solution alignment, governance, and large-scale transformation.
+      I work within the Enterprise Architecture function as a Portfolio Architect, shaping enterprise-scale cloud platforms, solution architectures, and DevOps ecosystems. I lead cloud migration and modernization programs that help organizations build secure, scalable, and future-ready digital foundations.
     </p>
   </div>
 
-  <div class="section">
+  <div class="container">
+    <h2>About</h2>
+    <p>
+      With 13+ years of experience in cloud, DevOps, and solution architecture, I operate at the intersection of Enterprise Architecture, platform strategy, and large-scale transformation. My work focuses on aligning technology platforms with business strategy while ensuring governance, scalability, and operational excellence across Azure and AWS environments.
+    </p>
+
     <h2>Core Expertise</h2>
     <ul>
-      <li>Enterprise & Solution Architecture (Azure & AWS)</li>
-      <li>Cloud Migration & Modernization Programs</li>
+      <li>Enterprise & Solution Architecture</li>
+      <li>Cloud Migration & Modernization</li>
       <li>Cloud Landing Zones & Platform Engineering</li>
-      <li>DevOps Transformation & CI/CD Modernization</li>
+      <li>DevOps Transformation & CI/CD Strategy</li>
       <li>Cloud Governance, Security & Compliance</li>
-      <li>Cost Optimization & FinOps Strategy</li>
+      <li>FinOps & Cost Optimization</li>
       <li>Enterprise Architecture Alignment</li>
     </ul>
-  </div>
 
-  <div class="section">
-    <h2>Key Projects</h2>
+    <h2>Selected Work</h2>
 
-    <h3>Enterprise Cloud Landing Zone (Azure)</h3>
-    <p>
-      Designed and implemented a secure, scalable Azure landing zone for a large enterprise, enabling standardized networking, identity, governance, and subscription management across multiple business units.
-    </p>
+    <div class="project">
+      <h3>Enterprise Cloud Landing Zone (Azure)</h3>
+      <p>
+        Designed and implemented a secure, scalable Azure landing zone enabling standardized networking, identity, governance, and subscription management across multiple business units.
+      </p>
+    </div>
 
-    <h3>Enterprise Cloud Migration & Modernization</h3>
-    <p>
-      Led large-scale migration and modernization initiatives, moving legacy workloads to Azure and AWS while redesigning architectures for cloud-native services, improved resilience, and operational efficiency.
-    </p>
+    <div class="project">
+      <h3>Cloud Migration & Modernization Program</h3>
+      <p>
+        Led enterprise-scale migration and modernization initiatives, transforming legacy workloads into cloud-native architectures across Azure and AWS with improved resilience and operational efficiency.
+      </p>
+    </div>
 
-    <h3>DevOps Transformation Program</h3>
-    <p>
-      Led DevOps enablement across 40+ applications by introducing CI/CD pipelines, infrastructure as code, and automated release governance, significantly improving deployment speed, reliability, and consistency.
-    </p>
+    <div class="project">
+      <h3>DevOps Transformation</h3>
+      <p>
+        Drove DevOps enablement across 40+ applications by introducing CI/CD pipelines, infrastructure as code, and automated governance, significantly improving deployment reliability and speed.
+      </p>
+    </div>
 
-    <h3>Multi-Cloud Architecture Strategy</h3>
-    <p>
-      Defined and governed a multi-cloud architecture across Azure and AWS, focusing on workload placement, cost optimization, security baselines, and operational consistency across platforms.
-    </p>
-  </div>
-
-  <div class="section">
-    <h2>Contact</h2>
-    <p>
-      LinkedIn: <a href="https://www.linkedin.com" target="_blank">View Profile</a><br>
-      Email: your-email@sankum.in
-    </p>
-  </div>
+    <div class="project">
+      <h3>Multi-Cloud Architecture Strategy</h3>
+      <p>
+        Defined and governed a multi-cloud operating model covering workload placement, cost optimization, security baselines, and platform consistency across Azure and AWS.
+      </p>
+    </div>
   <div class="section">
     <h2>Contact</h2>
     <p>
