--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 
     h2 {
       font-size: 26px;
-      margin-top: 60px;
+      margin-top: 70px;
       margin-bottom: 20px;
+      padding-bottom: 10px;
+      border-bottom: 1px solid #eee;
     }
 
     p {
@@ -145,12 +147,12 @@
         Defined and governed a multi-cloud operating model covering workload placement, cost optimization, security baselines, and platform consistency across Azure and AWS.
       </p>
     </div>
-  <div class="section">
-    <h2>Contact</h2>
-    <p>
+
+    <div class="footer">
+      <strong>Contact</strong><br>
       LinkedIn: <a href="https://linkedin.com/in/sankum-chandra" target="_blank">View Profile</a><br>
-      Email: sankum.chandra@outlook.com
-    </p>
+      Email: <a href="mailto:sankum.chandra@outlook.com">sankum.chandra@outlook.com</a>
+    </div>
   </div>
 
 </body>
