--- a/index.html
+++ b/index.html
@@ -69,4 +69,162 @@
       border: 1px solid var(--border);
       background: none;
       cursor: pointer;
-      color: var
+      color: var(--text);
+    }
+
+    h1 {
+      font-size: 40px;
+      line-height: 1.2;
+      margin-bottom: 12px;
+      color: var(--accent);
+    }
+
+    h2 {
+      font-size: 24px;
+      margin-top: 70px;
+      margin-bottom: 18px;
+      padding-bottom: 8px;
+      border-bottom: 1px solid var(--border);
+    }
+
+    p {
+      font-size: 17px;
+      color: var(--subtext);
+      max-width: 720px;
+    }
+
+    ul {
+      padding-left: 20px;
+      max-width: 720px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    .subtitle {
+      font-size: 17px;
+      color: var(--subtext);
+      margin-bottom: 18px;
+      max-width: 720px;
+    }
+
+    .project, .blog-post {
+      margin-bottom: 22px;
+      max-width: 720px;
+    }
+
+    .project h3, .blog-post h3 {
+      margin-bottom: 6px;
+      font-size: 19px;
+    }
+
+    a {
+      color: var(--accent);
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .footer {
+      margin-top: 80px;
+      padding-top: 30px;
+      border-top: 1px solid var(--border);
+      font-size: 15px;
+      color: var(--subtext);
+      max-width: 720px;
+    }
+
+    /* MOBILE OPTIMIZATION */
+    @media (max-width: 600px) {
+      h1 { font-size: 32px; }
+      .nav { justify-content: center; text-align: center; }
+      .nav div { margin-top: 8px; }
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- Navigation -->
+  <div class="nav">
+    <strong>Santhosh K C</strong>
+    <div>
+      <a href="#about">About</a>
+      <a href="#expertise">Expertise</a>
+      <a href="#work">Work</a>
+      <a href="#blog">Thought Leadership</a>
+      <a href="#contact">Contact</a>
+      <button onclick="toggleDarkMode()">🌙</button>
+    </div>
+  </div>
+
+  <div class="container">
+    <h1>Santhosh Kumar Chandrashekar</h1>
+    <div class="subtitle">
+      Portfolio Architect (Enterprise Architecture) | Cloud, DevOps & Solution Architecture | Azure & AWS
+    </div>
+    <p>
+      I work within the Enterprise Architecture function as a Portfolio Architect, shaping enterprise-scale cloud platforms, solution architectures, and DevOps ecosystems. I lead cloud migration and modernization programs that help organizations build secure, scalable, and future-ready digital foundations.
+    </p>
+
+    <h2 id="about">About</h2>
+    <p>
+      With 13+ years of experience in cloud, DevOps, and solution architecture, I operate at the intersection of Enterprise Architecture, platform strategy, and large-scale transformation across Azure and AWS environments.
+    </p>
+
+    <h2 id="expertise">Core Expertise</h2>
+    <ul>
+      <li>Enterprise & Solution Architecture</li>
+      <li>Cloud Migration & Modernization</li>
+      <li>Cloud Landing Zones & Platform Engineering</li>
+      <li>DevOps Transformation & CI/CD Strategy</li>
+      <li>Cloud Governance, Security & Compliance</li>
+      <li>FinOps & Cost Optimization</li>
+    </ul>
+
+    <h2 id="work">Selected Work</h2>
+    <div class="project">
+      <h3>Enterprise Cloud Landing Zone</h3>
+      <p>Designed and implemented a secure Azure landing zone across multiple business units.</p>
+    </div>
+    <div class="project">
+      <h3>Cloud Migration & Modernization</h3>
+      <p>Led enterprise migrations to Azure and AWS, modernizing legacy workloads.</p>
+    </div>
+    <div class="project">
+      <h3>DevOps Transformation</h3>
+      <p>Introduced CI/CD and IaC practices across 40+ applications.</p>
+    </div>
+
+    <h2 id="blog">Thought Leadership</h2>
+    <div class="blog-post">
+      <h3>Designing Enterprise Cloud Landing Zones</h3>
+      <p>Key principles for building scalable, governed, and secure cloud foundations.</p>
+    </div>
+    <div class="blog-post">
+      <h3>Cloud Migration Beyond Lift-and-Shift</h3>
+      <p>Why modernization and architecture refactoring drive long-term value.</p>
+    </div>
+    <div class="blog-post">
+      <h3>DevOps as an Enterprise Capability</h3>
+      <p>How platform engineering and automation transform delivery at scale.</p>
+    </div>
+
+    <div class="footer" id="contact">
+      <strong>Contact</strong><br>
+      LinkedIn: <a href="https://linkedin.com/in/sankum-chandra" target="_blank">View Profile</a><br>
+      Email: <a href="mailto:sankum.chandra@outlook.com">sankum.chandra@outlook.com</a>
+    </div>
+  </div>
+
+  <script>
+    function toggleDarkMode() {
+      document.body.classList.toggle("dark");
+    }
+  </script>
+
+</body>
+</html>
