--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
 
     .container {
-      max-width: 820px;
+      max-width: 900px;
       margin: auto;
       padding: 60px 20px;
     }
@@ -72,6 +72,23 @@
       color: var(--text);
     }
 
+    /* HERO WITH PHOTO */
+    .hero {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+      margin-top: 30px;
+      flex-wrap: wrap;
+    }
+
+    .profile-pic {
+      width: 140px;
+      height: 140px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 4px solid var(--accent);
+    }
+
     h1 {
       font-size: 40px;
       line-height: 1.2;
@@ -98,10 +115,6 @@
       max-width: 720px;
     }
 
-    li {
-      margin-bottom: 8px;
-    }
-
     .subtitle {
       font-size: 17px;
       color: var(--subtext);
@@ -112,11 +125,6 @@
     .project, .blog-post {
       margin-bottom: 22px;
       max-width: 720px;
-    }
-
-    .project h3, .blog-post h3 {
-      margin-bottom: 6px;
-      font-size: 19px;
     }
 
     a {
@@ -137,18 +145,19 @@
       max-width: 720px;
     }
 
-    /* MOBILE OPTIMIZATION */
+    /* MOBILE */
     @media (max-width: 600px) {
+      .hero {
+        flex-direction: column;
+        text-align: center;
+      }
       h1 { font-size: 32px; }
-      .nav { justify-content: center; text-align: center; }
-      .nav div { margin-top: 8px; }
     }
   </style>
 </head>
 
 <body>
 
-  <!-- Navigation -->
   <div class="nav">
     <strong>Santhosh K C</strong>
     <div>
@@ -162,13 +171,20 @@
   </div>
 
   <div class="container">
-    <h1>Santhosh Kumar Chandrashekar</h1>
-    <div class="subtitle">
-      Portfolio Architect (Enterprise Architecture) | Cloud, DevOps & Solution Architecture | Azure & AWS
+
+    <div class="hero">
+      <img src="profile.jpg" alt="Santhosh Kumar Chandrashekar" class="profile-pic">
+
+      <div>
+        <h1>Santhosh Kumar Chandrashekar</h1>
+        <div class="subtitle">
+          Portfolio Architect (Enterprise Architecture) | Cloud, DevOps & Solution Architecture | Azure & AWS
+        </div>
+        <p>
+          I work within the Enterprise Architecture function as a Portfolio Architect, shaping enterprise-scale cloud platforms, solution architectures, and DevOps ecosystems. I lead cloud migration and modernization programs that help organizations build secure, scalable, and future-ready digital foundations.
+        </p>
+      </div>
     </div>
-    <p>
-      I work within the Enterprise Architecture function as a Portfolio Architect, shaping enterprise-scale cloud platforms, solution architectures, and DevOps ecosystems. I lead cloud migration and modernization programs that help organizations build secure, scalable, and future-ready digital foundations.
-    </p>
 
     <h2 id="about">About</h2>
     <p>
@@ -190,27 +206,11 @@
       <h3>Enterprise Cloud Landing Zone</h3>
       <p>Designed and implemented a secure Azure landing zone across multiple business units.</p>
     </div>
-    <div class="project">
-      <h3>Cloud Migration & Modernization</h3>
-      <p>Led enterprise migrations to Azure and AWS, modernizing legacy workloads.</p>
-    </div>
-    <div class="project">
-      <h3>DevOps Transformation</h3>
-      <p>Introduced CI/CD and IaC practices across 40+ applications.</p>
-    </div>
 
     <h2 id="blog">Thought Leadership</h2>
     <div class="blog-post">
-      <h3>Designing Enterprise Cloud Landing Zones</h3>
+      <h3><a href="landing-zone-principles.html">Designing Enterprise Cloud Landing Zones</a></h3>
       <p>Key principles for building scalable, governed, and secure cloud foundations.</p>
-    </div>
-    <div class="blog-post">
-      <h3>Cloud Migration Beyond Lift-and-Shift</h3>
-      <p>Why modernization and architecture refactoring drive long-term value.</p>
-    </div>
-    <div class="blog-post">
-      <h3>DevOps as an Enterprise Capability</h3>
-      <p>How platform engineering and automation transform delivery at scale.</p>
     </div>
 
     <div class="footer" id="contact">
@@ -218,6 +218,7 @@
       LinkedIn: <a href="https://linkedin.com/in/sankum-chandra" target="_blank">View Profile</a><br>
       Email: <a href="mailto:sankum.chandra@outlook.com">sankum.chandra@outlook.com</a>
     </div>
+
   </div>
 
   <script>
