--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <body>
 
   <div class="nav">
-    <strong>Santhosh K C</strong>
+    <strong>Santhosh Kumar C</strong>
     <div>
       <a href="#about">About</a>
       <a href="#expertise">Expertise</a>
@@ -188,7 +188,7 @@
 
     <h2 id="about">About</h2>
     <p>
-      With 13+ years of experience in cloud, DevOps, and solution architecture, I operate at the intersection of Enterprise Architecture, platform strategy, and large-scale transformation across Azure and AWS environments.
+      With 14 years of experience in cloud, DevOps, solution architecture, engineering and support background,I currently operate at the intersection of Enterprise Architecture, platform strategy, and large-scale transformation across Azure and AWS environments.
     </p>
 
     <h2 id="expertise">Core Expertise</h2>
